# ggwave-python

./: .black.toml  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/: encoding_decoding_example.py  simple.py  streaming.py  streaming_listening_example.py  wav_example.py
ggwave_python/: ggwave.py  wav_utils.py
tests/: conftest.py  test_ggwave.py  test_wav.py  test_waveform.py
